# colombia-subsidy-mlops-platform

./: .dockerignore  .dvcignore  .gitignore  Dockerfile  README.md  docker-compose.yml  dvc.yaml  pyproject.toml  requirements-mlops.txt  requirements.txt
airflow/dags/: colombia_subsidy_mlops_dag.py
configs/: dataset.yaml  drift.yaml  train_anomaly.yaml  train_cascade.yaml
docs/: API.md
notebooks/: Full Maching Learning Modeling.ipynb  Subsidy Analysis.ipynb
scripts/: build_dataset.py  compile_kubeflow_pipeline.py  drift_check.py  evaluate.py  predict.py  serve_api.py  train.py  train_anomaly.py
src/colombia_subsidy_ml/: __init__.py  __main__.py  cli.py  config.py  paths.py
src/colombia_subsidy_ml/api/: __init__.py  main.py  model_store.py  schemas.py
src/colombia_subsidy_ml/data/: __init__.py  build.py  io.py
src/colombia_subsidy_ml/features/: preprocess.py
src/colombia_subsidy_ml/mlops/: __init__.py  kubeflow_pipeline.py
src/colombia_subsidy_ml/models/: cascade.py  factory.py  io.py  tuning.py
src/colombia_subsidy_ml/pipelines/: dataset.py  drift.py  evaluate.py  predict.py  train_anomaly.py  train_cascade.py
src/colombia_subsidy_ml/tracking/: mlflow_utils.py
src/colombia_subsidy_ml/utils/: arrays.py  metrics.py
tests/: test_anomaly_search.py  test_build_dataset.py  test_cascade.py  test_drift.py  test_preprocess.py  test_resampling.py
